# src/modules/auth/authController.ts
@@ -4,12 +4,14 @@ import jwt from "jsonwebtoken";
 import nodemailer from "nodemailer";
 import {
   authenticateDonor,
+  authenticateHospital,
   authenticateUser,
   generateToken,
   refreshAccessToken,
 } from "../../modules/auth/authService";
 import { prisma } from "../../../prisma/prisma";
 import dotenv from "dotenv";
+import { sendResetEmail } from "./emailservice";
 
 dotenv.config();
 
@@ -47,6 +49,29 @@ export const donorLogin = async (req: Request, res: Response) => {
 /**
  * Handle user login with role specification.s
  */
+export const HospitalLogin = async (req: Request, res: Response) => {
+  try {
+    const { email, password } = req.body;
+    console.log(req.body);
+
+    // Authenticate the user and retrieve details including role
+    const Hospital = await authenticateHospital({
+      email: email,
+      password: password,
+    });
+
+    if (!Hospital || "statusCode" in Hospital) {
+      return res.status(Hospital?.statusCode || 401).json({
+        error: Hospital?.message || "Invalid credentials",
+      });
+    }
+
+    return res.status(200).json({Hospital});
+  } catch (error) {
+    console.error("Login Error:", error);
+    res.status(500).json({ error: "Internal server error" });
+  }
+};
 export const userLogin = async (req: Request, res: Response) => {
   try {
     const { email, password } = req.body;
@@ -70,6 +95,7 @@ export const userLogin = async (req: Request, res: Response) => {
     res.status(500).json({ error: "Internal server error" });
   }
 };
+
 
 /**
  * Refresh access token using refresh token.
@@ -109,6 +135,7 @@ export const logout = (req: Request, res: Response) => {
  * Forgot password - send password reset link to the user's email.
  */
 export const forgotPassword = async (req: Request, res: Response) => {
+  try {
   const { email } = req.body;
 
   // Check if the email exists in the database
@@ -118,31 +145,20 @@ export const forgotPassword = async (req: Request, res: Response) => {
     return res.status(404).json({ message: "User not found" });
   }
 
-  // Generate password reset token
-  const resetToken = jwt.sign({ email: user.email, role: user.role }, RESET_SECRET_KEY, {
-    expiresIn: "15m",
+  const token = generateToken(user, process.env.JWT_SECRET!, {
+    expiresIn: process.env.JWT_EXPIRES_IN!,
   });
+  // Generate password reset token
+  // const resetToken = jwt.sign(user, RESET_SECRET_KEY, {
+  //   expiresIn: "15m",
+  // });
 
   // Send the reset token via email
-  const transporter = nodemailer.createTransport({
-    service: "gmail", // Use your email provider here
-    auth: {
-      user: process.env.EMAIL_USER,
-      pass: process.env.EMAIL_PASS,
-    },
-  });
-
-  const mailOptions = {
-    from: process.env.EMAIL_USER,
-    to: user.email,
-    subject: "Password Reset Request",
-    text: `You can reset your password using the following link: 
-      http://localhost:3000/api/auth/reset-password/${resetToken}`,
-  };
-
-  try {
-    await transporter.sendMail(mailOptions);
-    return res.status(200).json({ message: "Password reset email sent" });
+    const mail = await sendResetEmail(email, token);
+    return res.status(200).json({ 
+      message: "Password reset email sent",
+      data: mail
+     });
   } catch (error) {
     console.error("Error sending email:", error);
     return res.status(500).json({ message: "Failed to send reset email" });
